# Trittention-Transformer

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  cfgs.py
data/toy_problems/: arithmetic_operations.txt  longest_increasing_subsequence.txt
examples/: evaluate_models.py  train_toy_problem.py
models/: __init__.py  attention.py  local_trittention.py  mixed_attention.py  trittention.py  trittention_cube.py
results/: results_20240619-184853.csv
tests/: __init__.py  test_attention.py  test_trittention.py
utils/: __init__.py  data_utils.py  evaluation_utils.py
