[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trittention"
version = "0.1.5"
authors = [
    {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"},
]
description = "Trittention: Exploring N-way Attention in Transformer Models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.21.0",
    "scikit-learn>=0.24.2",
    "transformers>=4.10.0",
    "datasets>=1.12.0",
]

[project.urls]
"Homepage" = "https://github.com/muditbhargava66/trittention"
"Bug Tracker" = "https://github.com/muditbhargava66/trittention/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.7"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'